# cunyi-ai

./: .gitignore  .gitmodules  README.md  gradle.properties  gradlew  settings.gradle
.github/workflows/: build-apk.yml
android/CunYiAI/: build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
android/CunYiAI/app/: build.gradle.kts
android/CunYiAI/app/src/main/res/drawable/: input_background.xml
android/CunYiAI/app/src/main/res/layout/: activity_main.xml
android/CunYiAI/src/main/: AndroidManifest.xml
android/CunYiAI/src/main/java/com/cunyi/ai/: CunYiAIApplication.kt  MainActivity.kt
android/CunYiAI/src/main/res/drawable/: ic_launcher_foreground.xml  input_background.xml
android/CunYiAI/src/main/res/layout/: activity_main.xml
android/CunYiAI/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/CunYiAI/src/main/res/xml/: file_paths.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/cunyi/doctor/: CunyiDoctorApp.kt
app/src/main/java/com/cunyi/doctor/data/: ModelDownloadManager.kt
app/src/main/java/com/cunyi/doctor/llm/: LlamaEngine.kt
app/src/main/res/drawable/: bg_input.xml  bg_msg_bot.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_download.xml  item_message_bot.xml  item_message_user.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: requirements.txt
(+26 files in other folders)
